; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_sync-mgr.c_sync_state_to_str.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_sync-mgr.c_sync_state_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYNC_STATE_NUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"illegal sync state: %d\0A\00", align 1
@sync_state_str = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sync_state_to_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @SYNC_STATE_NUM, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %6, %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @seaf_warning(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i8* null, i8** %2, align 8
  br label %19

13:                                               ; preds = %6
  %14 = load i8**, i8*** @sync_state_str, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  %18 = load i8*, i8** %17, align 8
  store i8* %18, i8** %2, align 8
  br label %19

19:                                               ; preds = %13, %10
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local i32 @seaf_warning(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
